cluster/deployments/traefik/traefik-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: traefik
  labels:
    name: traefik
